fix: update rejected ticket contrast

--- a/api/tracker/static/tracker/style.css
+++ b/api/tracker/static/tracker/style.css
@@ -111,7 +111,8 @@ html {
 }
 
 .btn-cancel {
-  color: var(--color-primary);
+  color: var(--color-catalyst-blue);
+  background-color: var(--color-background-grey);
   text-decoration: underline;
 }
 .required {
